--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-android-location-enabler": "^1.2.2",
+    "react-native-base64": "^0.2.1",
     "react-native-camera": "^4.2.1",
+    "react-native-fs": "^2.18.0",
     "react-native-geolocation-service": "^5.3.0-beta.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-maps": "0.29.3",
+    "react-native-picker-checkbox": "^2.0.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "~3.4.0",
