--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.8",
+    "@react-native-firebase/app": "^12.9.1",
+    "@react-native-firebase/auth": "^12.9.1",
+    "@react-native-google-signin/google-signin": "^7.0.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "~42.0.1",
@@ -20,6 +23,7 @@
     "react-native-android-location-enabler": "^1.2.2",
     "react-native-base64": "^0.2.1",
     "react-native-camera": "^4.2.1",
+    "react-native-fbsdk-next": "^4.6.0",
     "react-native-fs": "^2.18.0",
     "react-native-geolocation-service": "^5.3.0-beta.3",
     "react-native-gesture-handler": "~1.10.2",
