--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "web": "expo start --web",
     "start": "react-native start"
   },
+  "jest": {
+    "transformIgnorePatterns": ["/node_modules/(?!react-native-base64)"]
+  },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.8",
     "@react-native-firebase/app": "^12.9.1",
