--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "react-native start"
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "transformIgnorePatterns": ["/node_modules/(?!react-native-base64)"]
   },
   "dependencies": {
