--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "jest": {
     "testEnvironment": "jsdom",
-    "transformIgnorePatterns": ["/node_modules/(?!react-native-base64)"]
+    "transformIgnorePatterns": [
+      "/node_modules/(?!react-native-base64)"
+    ]
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.8",
